my h_psi example

--- a/cbToy/CMakeLists.txt
+++ b/cbToy/CMakeLists.txt
@@ -12,4 +12,16 @@ target_link_libraries(cb_davidson
 	cb_ops
         qe_kssolver_davidson
         qe_lax) 
- 
+
+
+set(src_checker
+	my_h_psi_checker.f90)
+qe_add_executable(checker  "${src_checker}")
+set_target_properties(checker 
+	PROPERTIES
+	    OUTPUT_NAME checker.x)
+target_link_libraries(checker
+	PRIVATE
+	cb_lib
+	cb_ops)
+
