--- a/cbToy/cb_operators/CMakeLists.txt
+++ b/cbToy/cb_operators/CMakeLists.txt
@@ -2,7 +2,8 @@
 set(src_cbops
    cb_g_psi.f90  
    cb_h_psi.f90  
-   cb_s_psi.f90)
+   cb_s_psi.f90
+   my_h_psi.f90)
 qe_add_library(cb_ops ${src_cbops}) 
 qe_install_targets(cb_ops)
 target_link_libraries(cb_ops
